ops/istio/whitelist-googleapis.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-google-metadata
  namespace: fsi
spec:
  addresses:
  - 169.254.169.254
  hosts:
  - metadata.google.internal
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: whitelist-egress-googleapis
  namespace: fsi
spec:
  hosts:
  - "accounts.google.com"
  - "*.googleapis.com"
  ports:
  - name: http
    number: 80
    protocol: HTTP
  - name: https
    number: 443
    protocol: HTTPS
